--- a/ENCRYPTION_DEMO/ENCRYPTION_DEMO/ENCRYPTION_DEMO.csproj
+++ b/ENCRYPTION_DEMO/ENCRYPTION_DEMO/ENCRYPTION_DEMO.csproj
@@ -91,6 +91,7 @@
     <Content Include="index.html" />
     <Content Include="jquery.min.js" />
     <Content Include="NETWORK.js" />
+    <Content Include="network.min.js" />
     <Content Include="RSA_MODULE.js" />
     <Content Include="app.js" />
     <Content Include="Web.config" />
